CXXFLAGS = @CXXFLAGS@ -D_REENTRANT -D_THREAD_SAFE

bin_PROGRAMS = netdj
netdj_SOURCES = main.cc \
		util.cc util.h \
		MyRegex.cc MyRegex.h \
		Configuration.cc Configuration.h \
		Directory.cc Directory.h \
		AccessConf.cc AccessConf.h \
		Lockable.cc Lockable.h \
		File.cc File.h \
		ID3Tag.cc ID3Tag.h \
		HTTP.cc HTTP.h
